--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,1 +1,12 @@
 <h1> You're seeing dashboards </h1>
+
+<%= form_for @shout do |form| %>
+    <%= form.text_field :body, placeholder: "shout here!", required: true %>
+    <%= form.submit "Shout!" %>
+<% end %>
+
+<% @shouts.each do |shout| %>
+    <div> 
+        <%= shout.body %>
+    </div>
+<% end %>
