--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -1,6 +1,6 @@
 <div>
     <%= link_to shout.username, shout.user %>: 
-    <%= shout.body %>
+    <%= shout.content.body %>
     <%= link_to shout do %>
         <i><%= time_ago_in_words(shout.created_at) %> </i> ago
     <% end %>
