Revert "started complex associations"
This reverts commit 81ca497ed90087427c43cf31fdf773f9619b0d85.

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Home </h1>
+<h1> You're seeing dashboards </h1>
 
 <%= form_for @shout do |form| %>
     <%= form.hidden_field :content_type, value: "TextShout" %>
